[package]
name = "net_ensembles"
version = "0.3.0"
authors = ["Yannick Feld"]
edition = "2018"
readme = "README.md"
description = "Erdős-Rényi and small world ensembles. For simple sampling, Markov chains etc."
repository = "https://github.com/Pardoxa/net_ensembles"
keywords = [
  "small-world",
  "Erdos-Renyi",
  "random-graph",
  "ensemble",
  "graph"
]
categories = ["science", "mathematics"]
documentation = "https://docs.rs/net_ensembles/"
license = "MIT OR Apache-2.0"
homepage = "https://www.yfeld.de/Library.html"
exclude = [
  "TestData/*",
  "tests/*",
  "benches/*",
  "LICENSE*",
  "CHANGELOG.md",
  "CHECKLIST*.md"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7"}
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
rand_pcg = { version = "0.2.1", features = ["serde1"]}
serde_json = "1.0"
criterion = "0.3"

[features]
serde_support = ["serde"]
default = ["serde_support"]
