[package]
name = "net_ensembles"
version = "0.5.1"
authors = ["Yannick Feld"]
edition = "2021"
readme = "README.md"
description = "Erdős-Rényi and small world ensembles. For simple sampling, Markov chains etc."
repository = "https://github.com/Pardoxa/net_ensembles"
keywords = [
  "small-world",
  "Erdos-Renyi",
  "random-graph",
  "ensemble",
  "graph"
]
categories = ["science", "mathematics"]
documentation = "https://docs.rs/net_ensembles/"
license = "MIT OR Apache-2.0"
homepage = "https://www.yfeld.de"
exclude = [
  "TestData/*",
  "tests/*",
  "benches/*",
  "CHANGELOG.md",
  "CHECKLIST*.md",
  ".github/*",
  "*code-workspace",
  ".gitignore"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "^0.8"}
serde = { version = "1.0", optional = true, features = ["derive"] }
num-traits = "^0.2"
transpose = "^0.2"
average = { version = "^0.13", optional = true }
#sampling = { path = "../sampling" }
sampling = { git = "https://github.com/Pardoxa/sampling.git", rev = "0e71f3bfbcbd5ddd493b3a00f7ecbdd25f3f4056" }
#sampling = "^0.1.1"
permutation = "^0.2.5"

[dev-dependencies]
rand_pcg = { version = "0.3.1", features = ["serde1"]}
serde_json = "1.0"
criterion = "0.3"

[features]
serde_support = ["serde"]
bootstrap = ["average"]
default = ["serde_support", "bootstrap"]

#[[bench]]
#name = "sw_bench"
#harness = false
#
#[[bench]]
#name = "er_m_bench"
#harness = false
#
#[[bench]]
#name = "er_c_bench"
#harness = false
#
#[[bench]]
#name = "bench_vertex_load"
#harness = false
#
#[[bench]]
#name = "bench_q_core"
#harness = false
#
#[[bench]]
#name = "graph"
#harness = false
#
#[[bench]]
#name = "er_c_creation"
#harness = false

#[[bench]]
#name = "configuration_bench"
#harness = false

#
#[[bench]]
#name = "barabasi_albert_creation"
#harness = false
#[[bench]]
#name = "iterator_bench"
#harness = false
